# syn_area_label

./: .gitignore  Apptainer  Makefile  README.md  label_spec.md  painting_instructions.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
data/: README.md
data/input/: example.tsv
scripts/: analyse_areas.py  cache_rois.py  create_data.py  dummy_cremi.py  example.py  kc_examples.json  open_cremi.sh  readme.py
src/syn_area_label/: __init__.py  bigcat_io.py  constants.py  roi_download.py  synapses.py  utils.py  zarr_io.py
src/syn_area_label/analyse/: area.py  read_data.py
tests/: test_syn_area_label.py
