[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2", "extreqs"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/syn_area_label/version.py"

[tool.black]
extend-exclude = '^/src/syn_area_label/version.py'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = ["venv"]
